# sistema-comercial

./: .gitattributes  API_REFERENCE.md  DEPLOYMENT_GUIDE.md  GUIA_COMPLETA.md  QUICK_START.md  README.md  backup_20250901_123102.dump  comandera.txt  deploy.sh  docker-compose.prod.yml  nginx.conf
.github/: backend-ci.yml
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  env.example  pyproject.toml  requirements.txt  start.sh  test.db
backend/app/: main.py  seed.py
backend/app/core/: audit.py  auth.py  deps.py  monitoring.py  rate_limiter.py  security.py  settings.py  validators.py
backend/app/db/: base.py  database.py  session.py
backend/app/models/: auditoria.py  cliente_model.py  compra_model.py  descuento_model.py  inventario_model.py  notificacion_model.py  precio_model.py  producto.py  proveedor_model.py  user_model.py  venta_model.py
backend/app/routers/: __init__.py  auditoria_router.py  auth_router.py  backup_router.py  cliente_router.py  compra_router.py  dashboard_router.py  descuento_router.py  health_router.py  inventario_router.py  monitoring_router.py  notificacion_router.py  precio_router.py  producto_router.py  proveedor_router.py  stock_router.py  user_router.py  venta_router.py
backend/app/schemas/: auditoria_schema.py  auth_schema.py  cliente_schema.py  compra_schema.py  dashboard_schema.py  descuento_schema.py  inventario_schema.py  notificacion_schema.py  precio_schema.py  producto_schema.py  proveedor_schema.py  user_schema.py  venta_schema.py
backend/migrations/: env.py
backend/tests/: conftest.py  pytest.ini  test_00_health.py  test_01_auth.py  test_02_users_crud.py  test_03_auditoria_optional.py  test_backup.py  test_clientes.py  test_compras_completas.py  test_dashboard.py  test_descuentos.py  test_inventario.py  test_notificaciones.py  test_precios.py  test_productos.py  test_proveedores.py  test_stock_completo.py  test_ventas_completas.py
(+41 files in other folders)
